# Headline_Detection

./: .env.example  .gitignore  Makefile  README.md  requirements.txt
data/1. Raw/: headline_no_reply_tweet_id.csv
data/3. Labeling Ready/: README.md  concat_all.csv  organization.xlsx  organization_1.xlsx  organization_2.xlsx  organization_3.xlsx  organization_4.xlsx  organization_5.xlsx  organization_6.xlsx  replies_100.xlsx  replies_100_1.xlsx  replies_100_2.xlsx  replies_100_3.xlsx  replies_100_4.xlsx  replies_100_5.xlsx  replies_100_6.xlsx  replies_30.xlsx  replies_50.xlsx  replies_80.xlsx
data/4. Processed/: test.csv  train.csv
data/5. External Data/: gratis.csv  gratis_pred.csv
src/: Checkpoint_Upload.ipynb
src/1. Data Retrieval/: data_reply_headline_filtering.ipynb  exploration.ipynb  headline_config.example.json  headline_crawler.py  reply_config.example.json  reply_crawler.py
src/2. Data Processing - Labeling - Splitting/: 1. data_explore.ipynb  2. prepare_labeling.ipynb  3. data_explore_labeling.ipynb  4. preprocessing.ipynb  (+2 more)
src/lib/: README.md  pyproject.toml  setup.py
src/lib/src/kaelib/: __init__.py  s3.py  s3_threading.py
src/lib/src/kaelib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lib/src/kaelib/crawler/: __init__.py  config.py  crawler.py
src/lib/src/kaelib/model/: __init__.py  fasttext.py
src/lib/src/kaelib/processor/: HeadlineDataset.py  MetricsContainer.py  NDETCStemmerWraper.py  TextProcessingPipeline.py  WordTokenizer.py  __init__.py  custom_metrics.py  dataset.py  datasets.py  preprocessing_func.py  tokenization.py
(+156 files in other folders)
